--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.259.0",
 		"@aws-sdk/client-s3": "^3.252.0",
+		"@aws-sdk/lib-dynamodb": "^3.259.0",
 		"mailparser": "^3.6.3"
 	},
 	"type": "module"
