--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@aws-sdk/client-dynamodb": "^3.259.0",
 		"@aws-sdk/client-s3": "^3.252.0",
 		"@aws-sdk/lib-dynamodb": "^3.259.0",
+		"axios": "^1.2.6",
 		"mailparser": "^3.6.3"
 	},
 	"type": "module"
