--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
 	"dependencies": {
+		"mailparser": "^3.6.3"
+	},
+	"devDependencies": {
 		"@aws-sdk/client-dynamodb": "^3.259.0",
 		"@aws-sdk/client-s3": "^3.252.0",
 		"@aws-sdk/lib-dynamodb": "^3.259.0",
-		"axios": "^1.2.6",
-		"mailparser": "^3.6.3"
+		"axios": "^1.2.6"
 	},
 	"type": "module"
 }
